@@ -4,7 +4,7 @@
 <div class="control-panel">
 
     <!-- Use a separate label so that clicking on the label fires the check box. -->
-    <label class=control-panel-label><input type="checkbox" name="ShowFrameRateCheckBox" value="showFrameRate" /><%= showFrameRate %></label>
+    <label class=control-panel-label><input type="checkbox" id="showPerformanceMonitorCheckBox" value="showPerformanceMonitor" /><%= showPerformanceMonitor %></label>
     <br/>
 
     <!-- Flip Polarity button -->
